--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: "3.9"
 
 services:
   bornosoft:
+    image: kazinayeem/bornosoft:latest
     container_name: bornosoft_app
-    build: .
     ports:
       - "80:80"
     restart: always
