--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
-version: "3.9"
-
 services:
+
   bornosoft:
     image: dockernayeem/bornosoft:latest
     container_name: bornosoft_app
@@ -28,6 +27,8 @@ services:
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     restart: always
+    depends_on:
+      - cadvisor
 
   grafana:
     image: grafana/grafana
@@ -35,3 +36,5 @@ services:
     ports:
       - "3000:3000"
     restart: always
+    depends_on:
+      - prometheus
